[package]
name = "coderoot"
version = "0.1.0"
authors = ["Greg Manning <greg@gregmanning.uk>"]
edition = "2018"
description = "Simple tool to run a command at the top level of source control checkout"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
dunce = "~1.0.0"

[profile.release]
opt-level = 'z' # optimize for size
lto = true
codegen-units = 1
panic = 'abort'
